# fastapi-file-router

./: .gitignore  README.md  pyproject.toml
examples/: main.py
examples/routes/: route.py
examples/routes/products/: route.py
examples/routes/products/[product_id]/: reviews.py  route.py
examples/routes/settings/: route.py
examples/routes/settings/notifications/: email.py  route.py
examples/routes/users/: [user_id].py  profile.py  route.py
src/fastapi_file_router/: __init__.py  router.py
tests/: router.test.py  test_file_router.py
