[tool.poetry]
name = "fastapi-file-router"
version = "0.1.15"
description = "File-based routing for FastAPI"
authors = ["Bewinxed <bewinxed@gmail.com>"]
repository = "https://github.com/Bewinxed/fastapi-file-router"
license = "WhoCares"
readme = "README.md"
packages = [
    # include the router in src
    { include = "fastapi_file_router", from = "./src" },

]
package-mode=true

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Same as Black.

line-length = 88
indent-width = 4
fix=true
unsafe-fixes = true
select = ["ALL"]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    ".venv",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]


# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.flake8-bugbear]
# BUGBEAR FIX FOR FASTAPI'S Depends
#
# The `Depends` class is a bit of a special case in FastAPI. It's a class that is used as a
# dependency injection mechanism. It's used to declare that a function parameter is a dependency
# that needs to be injected by FastAPI.
#
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "Depends",
]
